--- a/index.html
+++ b/index.html
@@ -12,13 +12,8 @@
         <a-entity
           position="0 0 0"
           scale="0.05 0.05 0.05"
-          gltf-model="">
+          gltf-model="https://raw.githack.com/AR-js-org/AR.js/master/aframe/examples/image-tracking/nft/trex/scene.gltf">
         </a-entity>
-
-        <a-light type="ambient"  intensity="0.5"></a-light>
-        <a-light type="directional" intensity="1" position="1 2 1"></a-light>
-        <a-light type="directional" intensity="0.3" position="-1 1 1"></a-light>
-
     </a-marker>
 
     <a-entity camera></a-entity>
